Fix music text wrapping when viewport is small

--- a/assets/less/music.less
+++ b/assets/less/music.less
@@ -15,6 +15,8 @@
     line-height: 50px;
     opacity: 0;
     position: relative;
+    overflow: hidden;
+    white-space: nowrap;
     .left {
       position: absolute;
       float: left;
